# electron-microscope-control-board

./: CMakeLists.txt  README.md
docs/: architecture.md
include/common/: Logger.hpp  Protocol.hpp
src/: main.cpp
src/control_board/: CommandHandler.cpp  CommandHandler.hpp  ControlBoard.cpp  ControlBoard.hpp  MessageParser.cpp  MessageParser.hpp
src/host/: CommunicationChannel.cpp  CommunicationChannel.hpp  HostSystem.cpp  HostSystem.hpp
src/microscope/: BeamController.cpp  BeamController.hpp  MicroscopeController.cpp  MicroscopeController.hpp  StageController.cpp  StageController.hpp  VacuumSystem.cpp  VacuumSystem.hpp
tests/: CMakeLists.txt  test_command_handler.cpp  test_integration.cpp  test_message_parser.cpp
